--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,56 @@
 
 .heading {
     font-family: 'PT Serif', 'Times New Roman', serif;
+    font-weight: 200;
+    font-size: 400%;
+    margin: 3rem;
+}
+
+h2 {
+    font-weight: 200;
 }
 
 /* Body */
 
-body {
+* {
     font-family: 'Merriweather', 'Times New Roman', serif;
     background: #000;
     color: #fff;
+    text-align: center;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
 }
