--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,52 @@ h2 {
 .hidden {
     display: none;
 }
+
+.btn {
+    font-size: 2rem;
+    padding: 2rem 0;
+    width: 18rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    background: #2e2e2e;
+    border-radius: 2px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    transform: none;
+}
+
+/* Quiz file styling */
+
+.choice-container {
+    display: flex;
+    margin-bottom: 0.8rem;
+    width: 100%;
+    border-radius: 4px;
+    background: #fff;
+    font-size: 3rem;
+    min-width: 80rem;
+}
+
+.choice-container:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+    transition: transform 100ms;
+}
+
+.choice-prefix {
+    padding: 2rem 2.5rem;
+    color: #fff;
+}
+
+.choice-text {
+    padding: 2rem;
+    width: 100%;
+}
