--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ h2 {
     display: flex;
     margin-bottom: 0.8rem;
     width: 100%;
-    border-radius: 4px;
+    border-radius: 6px;
     background: #fff;
     font-size: 3rem;
     min-width: 80rem;
@@ -105,4 +105,18 @@ h2 {
 .choice-text {
     padding: 2rem;
     width: 100%;
+}
+
+.correct {
+    background: #D4AF37;
+}
+
+.incorrect {
+    background: #450504;
+}
+
+@media screen and (max-width: 768px) {
+    .choice-container {
+        min-width: 40rem;
+    }
 }
