--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=PT+Serif&display=swap');
 
-/* Heading */
+/* everything */
 
-.heading {
+body {
+    background-color: #000;
+    color: #fff;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 62.5%;
+    font-family: 'Merriweather', 'Times New Roman', serif;
+}
+
+/* headings */
+
+h1 {
+    font-size: 5.4rem;
     font-family: 'PT Serif', 'Times New Roman', serif;
     font-weight: 200;
-    font-size: 400%;
-    margin: 3rem;
+    margin-bottom: 5rem;
 }
 
 h2 {
     font-weight: 200;
+    font-size: 4.2rem;
+    margin-bottom: 4rem;
 }
 
-/* Body */
-
-* {
-    font-family: 'Merriweather', 'Times New Roman', serif;
-    background: #000;
-    color: #fff;
-    text-align: center;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+/* body content */
 
 .container {
     width: 100vw;
@@ -59,18 +66,20 @@ h2 {
 }
 
 .btn {
-    font-size: 2rem;
+    font-size: 2.4rem;
     padding: 2rem 0;
-    width: 18rem;
+    width: 30rem;
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
+    color: #fff;
     background: #2e2e2e;
     border-radius: 2px;
 }
 
 .btn:hover {
     cursor: pointer;
+    transition: transform 150ms;
     transform: scale(1.03);
 }
 
@@ -79,44 +88,3 @@ h2 {
     transform: none;
 }
 
-/* Quiz file styling */
-
-.choice-container {
-    display: flex;
-    margin-bottom: 0.8rem;
-    width: 100%;
-    border-radius: 6px;
-    background: #fff;
-    font-size: 3rem;
-    min-width: 80rem;
-}
-
-.choice-container:hover {
-    cursor: pointer;
-    transform: scale(1.02);
-    transition: transform 100ms;
-}
-
-.choice-prefix {
-    padding: 2rem 2.5rem;
-    color: #fff;
-}
-
-.choice-text {
-    padding: 2rem;
-    width: 100%;
-}
-
-.correct {
-    background: #D4AF37;
-}
-
-.incorrect {
-    background: #450504;
-}
-
-@media screen and (max-width: 768px) {
-    .choice-container {
-        min-width: 40rem;
-    }
-}
