--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,12 @@ h2 {
     margin-bottom: 4rem;
 }
 
+h3 {
+    font-weight: 200;
+    font-size: 2.2rem;
+    margin-bottom: 4rem;
+}
+
 /* body content */
 
 .container {
@@ -88,3 +94,41 @@ h2 {
     transform: none;
 }
 
+/* End Page CSS */
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    color: #2e2e2e;
+    background: #fff;
+}
+
+#username {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    text-align: center;
+}
+
+#saveScoreBtn {
+    border: none;
+}
+
+.fa-home {
+    margin-left: 1rem;
+    font-size: 2rem;
+}
