--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,11 +222,12 @@ input {
 
 @media screen and (max-width: 500px) {
     h1 {
-        font-size: 5rem;
-        padding-left: 1.5rem;
+        font-size: 6rem;
+        padding-left: 3rem;
     }
 
     h2 {
+        text-align: center;
         font-size: 3rem;
     }
 
