--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1 {
     font-family: 'PT Serif', 'Times New Roman', serif;
     font-weight: 200;
     margin-bottom: 5rem;
+    padding-left: 2rem;
 }
 
 h2 {
