Changes to CSS file per validation checks, margin change from none to 0 on line 235

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ input {
     }
 
     .container {
-        margin: none;
+        margin: 0;
         max-width: 40rem;
         height: 90vh;
     }
