Add center text align to style css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ body {
 
 /* headings */
 
+.heading {
+    text-align: center;
+}
+
 h1 {
     font-size: 5.4rem;
     font-family: 'PT Serif', 'Times New Roman', serif;
