--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h3 {
 
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 88vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -174,7 +174,7 @@ h3 {
 #instructions {
     text-align: center;
     font-size: 2rem;
-    height: 80vh;
+    height: 66vh;
 }
 
 ul {
@@ -183,7 +183,7 @@ ul {
 }
 
 #instructions > p {
-    padding: 2%;
+    padding-top: 2%;
     font-size: 3rem;
 }
 
