--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,14 +172,29 @@ h3 {
 /* Instructions Page CSS Styling */
 
 #instructions {
+    position: fixed;
+    display: none;
+    height: 75%;
+    width: 75%;
+    background-color: #2e2e2e;
+    cursor: pointer;
+}
+
+.how-to-play {
+    position: absolute;
+    top: 10%;
+    left: 10%;
     text-align: center;
     font-size: 2rem;
-    height: 66vh;
 }
 
 ul {
     font-size: 4rem;
     line-height: 105%;
+}
+
+li {
+    list-style: none;
 }
 
 #instructions > p {
