--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,8 @@ h3 {
     left: 10%;
     text-align: center;
     font-size: 2rem;
+    font-weight: 200;
+    padding: 4% 2%;
 }
 
 ul {
@@ -199,7 +201,7 @@ li {
 
 #instructions > p {
     padding-top: 2%;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 /* End Page CSS */
