--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,11 +52,13 @@ h3 {
 }
 
 .intro-div {
-    background-color: rgba(239,58,75,0.3);
+    background-color: black;
+    border: 1px #2e2e2e dotted;
 }
 
 .quiz-end-div {
-    background-color: rgba(239,58,75,0.3);
+    background-color: black;
+    border: 1px #2e2e2e dotted;
     max-width: 83rem;
     margin: 5% auto;
 }
@@ -115,7 +117,7 @@ h3 {
     border: solid 1px #fff;
     border-radius: 6px;
     font-size: 3rem;
-    min-width: 80rem;
+    min-width: 78rem;
 }
 
 .choice-container:hover {
@@ -185,7 +187,7 @@ h3 {
     position: fixed;
     display: none;
     height: 85%;
-    width: 75%;
+    width: 60%;
     background-color: #2e2e2e;
     cursor: pointer;
 }
@@ -193,11 +195,11 @@ h3 {
 .how-to-play {
     position: absolute;
     top: 10%;
-    left: 10%;
+    left: 20%;
     text-align: center;
     font-size: 2rem;
     font-weight: 200;
-    padding: 4% 2%;
+    padding: 2% 10%;
 }
 
 ul {
@@ -210,7 +212,7 @@ li {
 }
 
 #instructions > p {
-    padding-top: 2%;
+    padding-top: 4%;
     font-size: 2rem;
 }
 
