adjust styling on leaderboard page and change of class name for bg overlay behind text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h3 {
     border: 1px #2e2e2e dotted;
 }
 
-.quiz-end-div {
+.bg-div {
     background-color: black;
     border: 1px #2e2e2e dotted;
     max-width: 83rem;
