--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ h3 {
 
 @media screen and (max-width: 768px) {
     .choice-container {
-        min-width: 40rem;
+        min-width: 37rem;
     }
 }
 
@@ -270,8 +270,9 @@ input {
 
 @media screen and (max-width: 500px) {
     h1 {
-        font-size: 6rem;
-        padding-left: 3rem;
+        font-size: 5.5rem;
+        padding-left: 3.5rem;
+        padding-top: 1rem;
     }
 
     h2 {
@@ -280,12 +281,13 @@ input {
     }
 
     .container {
-        max-width: 40rem;
-        height: 90vh;
+        max-width: 45rem;
+        height: 75vh;
     }
     
     .how-to-play {
         left: 0;
+        padding: 20% 10%;
     }
 
     #instructions {
@@ -294,21 +296,38 @@ input {
         font-size: 20%;
     }
 
+    #instructions > h2 {
+        margin-bottom: 4.5rem;
+    }
+
     ul {
-        font-size: 3.5rem;
+        font-size: 3rem;
         line-height: 120%;
     }
 
     #instructions > p {
-        padding-top: 5%;
-        font-size: 3rem;
+        padding-top: 8%;
+        font-size: 2.5rem;
+    }
+
+    #hud {
+        justify-content: space-around;
+    }
+
+    .intro-div {
+        margin: 12% 0 50% 6%;
+    }
+
+    .bg-div {
+        margin: 25% 0 50% 6%;
     }
 
     .choice-container {
-        font-size: 5rem;
+        font-size: 4rem;
     }
 
     * {
         font-size: 50%;
+        background-position: center;
     }
 }
